# Humotica

./: Dockerfile  HUMOTICA-CORE-CONCEPTS.md  HUMOTICA_LAYER.md  LICENSE  README.md  glama.json  pyproject.toml
BETTI-TIBET-TEST/: begrippenlijst.md  openwrt-tibet-api-validation.md  test_results.json  validation_tests.py
betti-core/: DABS-14-WETTEN.md  __init__.py  balans.py  complexity.py  hicss.py  natural_laws.py  resource_planner.py  snaft.py  token_chain.py
docs/: HUMOTICA_SECURITY_SUMMARY.md  architecture.md  getting-started.md
integrations/voice/: __init__.py  assistant.py  stt.py  tts.py  wake_word.py
jis-protocol/: README.md
papers/: 14-physics-laws.md
sdk/: SDK_DID_IMPLEMENTATION.md
sdk/python/: README.md  README_SENSE.md  setup.py
sdk/python/examples/: TBET-BETTI-TESTING.md  basic_usage.py  live_demo.py  phone_receiver_mock.py  register_caller.py  simple_app.py  tbet_betti_demo.py  tbet_live_test.py
sdk/python/jis_client/: __init__.py  client.py  crypto.py  models.py
sdk/python/jis_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/tibet_betti_client/: README.md  __init__.py  balancer.py  client.py  context.py  intent_tech_layer.py  sense.py  setup.py  test_installation.py  tibet.py  trust_token.py  voltage_controller.py  websocket.py
sdk/python/tibet_betti_client/examples/: advanced_orchestration.py  complete_example.py  hello_world.py
src/humotica/: __init__.py
